Fri Jun  7 09:29:33 2013  Kenta Murata  <mrkn@cookpad.com>

	* bignum.c (rb_int_import): explicitly casting BDIGIT_DBL to BDIGIT
	  to prevent warning.

Fri Jun  7 07:29:33 2013  Tanaka Akira  <akr@fsij.org>

	* internal.h (rb_int_export): countp argument is split into
	  wordcount_allocated and wordcount.

	* bignum.c (rb_int_export): Follow the above change.

	* pack.c (pack_pack): Ditto.

Fri Jun  7 07:17:00 2013  Kenta Murata  <mrkn@mrkn.jp>

	* NEWS: describe a compatibility issue of Numeric#quo
	  introduced at r41109.

Fri Jun  7 07:15:00 2013  Kenta Murata  <mrkn@mrkn.jp>

	* NEWS: fix style.

Fri Jun  7 06:48:17 2013  Benoit Daloze  <eregontp@gmail.com>

	* numeric.c: remove unused ID id_to_r introduced in r41109.

Fri Jun  7 06:15:31 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (rb_int_import): New function.
	  (int_import_push_bits): Ditto.

	* internal.h (rb_int_import): Declared.

	* pack.c (pack_unpack): Use rb_int_import for BER compressed integer.

Thu Jun  6 22:24:00 2013  Kenta Murata  <mrkn@mrkn.jp>

	* numeric.c (num_quo): Use to_r method to convert the receiver to
	  rational.  [ruby-core:41575] [Bug #5736]

	* test/ruby/test_numeric.rb: add a test for the above change.

Thu Jun  6 20:40:17 2013  Tanaka Akira  <akr@fsij.org>

	* configure.in: Invoke RUBY_REPLACE_TYPE for size_t.
	  Don't invoke RUBY_CHECK_PRINTF_PREFIX for size_t to avoid conflict
	  with RUBY_REPLACE_TYPE.

	* internal.h (rb_absint_size): Declared.
	  (rb_absint_size_in_word): Ditto.
	  (rb_int_export): Ditto.

	* bignum.c (rb_absint_size): New function.
	  (rb_absint_size_in_word): Ditto.
	  (int_export_fill_dd): Ditto.
	  (int_export_take_lowbits): Ditto.
	  (rb_int_export): Ditto.

	* pack.c (pack_pack): Use rb_int_export for BER compressed integer.

Thu Jun  6 19:31:33 2013  Tadayoshi Funaba  <tadf@dotrb.org>

	* ext/date/date_core.c: fixed coding error [ruby-core:55337].
	  reported by Riley Lynch.

Thu Jun  6 14:16:37 2013  Narihiro Nakamura  <authornari@gmail.com>
